# thermal_distribution_simulation

./: .gitignore  CMakeLists.txt  README.md  kernel.cl  main.cpp
dto/: TemperatureCell.cpp  TemperatureCell.h  TemperatureGrid.cpp  TemperatureGrid.h
logic/: OpenCLSimulation.cpp  OpenCLSimulation.h  Simulation.cpp  Simulation.h
tests/: HeatMapWidgetTest.cpp
ui/: HeatMapWidget.cpp  HeatMapWidget.h
